healthcabinet/k8s/apps/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: healthcabinet
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
